<resources>
    <string name="app_name">LAT1_AKB11_10116494</string>
    <string name="title">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="mulai">Mulai</string>
    <string name="title_login">Kode Keluarga</string>
    <string name="txt_keterangan">Ketikan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="term">Dengan menekantombol masuk berarti anda menyetujui \n <b> Ketentuan Pengguna </b> dan <b> Kebijakan Data </b> kami</string>
    <string name="masuk">Masuk</string>
    <string name="get_kode">Belum punya kode keluarga?</string>
    <string name="buy_kode">Beli Kode Keluarga Disini</string>
    <string name="get_nama">Nama Panggilan Kamu</string>
    <string name="hint_nama">Contoh : Budi</string>
    <string name="get_umur">Umur Kamu</string>
    <string name="hint_umur">Contoh : 12</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="oke">Oke</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>
