<?xml version="1.0" encoding="utf-8"?>

<!--NIM   : 10116494-->
<!--Nama  : Imam Dwi Cahyo-->
<!--Kelas : IF-11 / AKB-11-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_tree"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/title_login"
            android:textSize="28dp"
            android:textColor="@color/black_87"/>

        <TextView
            android:id="@+id/txt_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_keterangan"
            android:layout_below="@id/txt_title"
            android:textColor="@color/black_87"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_regular"/>

        <EditText
            android:id="@+id/inp_kode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_keterangan"
            android:layout_marginTop="15dp"

            android:background="@drawable/edittext_rounded"
            android:text="A1B2C3"
            android:textAlignment="center"
            android:textSize="18dp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/txt_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inp_kode"
            android:layout_marginTop="10dp"
            android:text="@string/term"
            android:fontFamily="@font/rubik_regular"
            android:textSize="11dp"
            android:textAlignment="center"
            android:textColor="@color/black_87"/>

        <Button
            android:id="@+id/btn_mulai"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_rounded"
            android:layout_below="@id/txt_term"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginTop="10dp"
            android:text="@string/masuk"
            android:textSize="15dp"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@drawable/border"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_getkode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_kode"
            android:textAlignment="center"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/lavender_blue"/>

        <Button
            android:id="@+id/btn_mulai"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/btn_rounded_blue"
            android:layout_below="@id/txt_getkode"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:text="@string/buy_kode"
            android:textColor="@color/white_two"
            android:textSize="15dp"
            android:textAllCaps="false"/>

    </RelativeLayout>

</LinearLayout>